--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* Add application styles & imports to this file! */
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap");
+
+* {
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+body{
+  background-color:#ff6666;
+}
